# AsiProject

./: CMakeLists.txt  README.md  premake.bat
source/: Plugin.cpp  Plugin.h  PluginRender.cpp  PluginRender.h  Render.cpp  Render.h  dllmain.cpp
src/: Plugin.cpp  Plugin.h  PluginRender.cpp  PluginRender.h  main.cpp  main.h
src/ImGui/: main.cpp  main.h
src/without ImGui/: main.cpp  main.h
src/without_ImGui/: main.h
